# parselglossy

./: .azure-pipelines.yml  .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  azure-pipelines.yml  flake.nix  pyproject.toml  read_template.py  requirements.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.ci/: azure-steps.yml
.githooks/: LICENSE-Python  license_maintainer.py  pre-commit  pre-commit-black  pre-commit-license-maintainer
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml  package.yml  test.yml
devtools/: license-header
devtools/azure/: steps.yml
docs/: Makefile  conf.py  design.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
paper/: paper.bib  paper.md
parselglossy/: __init__.py  api.py  atoms.py  check_template.py  cli.py  documentation.py  exceptions.py  generation.py  generator.py  getkw.py  getkw_grammar.py  parselglossy.py  read_yaml.py  standard_grammar.py  token_actions.py  types.py  utils.py  validate.py  validation.py  validation_plumbing.py  views.py  yaml_utils.py
parselglossy/grammars/: __init__.py  atoms.py  getkw.py  lexer.py  lsdalton.py  standard.py
parseltongue/: __init__.py  cli.py
tests/: conftest.py  custom_strategies.py  read_in.py  test_api.py  test_atoms.py  test_check_predicates.py  test_check_template.py  test_cli.py  test_default_actions.py  test_documentation.py  test_getkw.py  test_lsdalton.py  test_merge.py  test_new_validation.py  test_parselglossy.py  test_parseltongue.py  test_standard.py  test_standard_grammar.py  test_type_check.py  test_types.py  test_validation.py  test_views.py
tests/api/: docs_template.yml  scf.inp  scf_ir.json  standard.inp
tests/cli/: docs_template.yml  getkw.inp
tests/documentation/: input.rst
tests/ref/: dwigt.rst  generated_input.rst  getkw_ir.json  input.rst  scf_fr.json  simple.rst  standard_ir.json
tests/validation/defaulting/: all_default.yml
tests/validation/input_errors/: input_missing_keyword.yml  input_predicate_cross.yml  input_predicate_intra.yml  input_type_error_bool.yml  input_type_error_float.yml  input_type_error_int.yml  input_type_error_list.yml  input_type_error_str.yml  input_unexpected_keyword.yml  template.yml  unexpected_keyword.yml  unexpected_section.yml  unexpected_section_nested.yml
tests/validation/overall/: default.yml  input_ordering.yml  ordering.yml  template.yml  template_all_default.yml  template_with_default_section.yml
tests/validation/template_errors/: input.yml  template_empty_documentation.yml  template_invalid_predicate.yml  template_no_documentation.yml  template_w_cycles.yml
validation/: example.yml  template.yml  validate.py
