[tool.poetry]
name = "parselglossy"
version = "0.3.0"
description = "Generic input parsing library, speaking in tongues"
license = "MIT"
authors = [
  "Roberto Di Remigio",
  "Radovan Bast",
]
readme = "README.rst"
repository = "https://github.com/dev-cafe/parselglossy"
homepage = "https://parselglossy.readthedocs.io"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
pyparsing = "^2.4"
pyyaml = "^5.2"
networkx = "^2.4"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
codecov = "^2.0"
coverage = "^5.0"
flake8 = "^3.7"
hypothesis = "^5.8"
isort = "^4.3"
mypy = "^0.761"
pytest = "^5.3"
pytest-black = "^0.3"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.4"
pytest-sugar = "^0.9"

[tool.poetry.scripts]
parselglossy = 'parseglossy.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
