[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
addopts = "-rws --ignore=setup.py"
testpaths = [
    "tests",
]
norecursedirs = [
  "env",
  ".direnv",
  "venv",
  ".env",
  ".venv",
  "docs",
  ".eggs",
  ".git",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "networkx",
    "pyparsing",
    "parselglossy.types",
]
ignore_missing_imports = true
ignore_errors = true

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "parselglossy"
license = "MIT"
author = "Roberto Di Remigio"
requires=[
    "click",
    "pyparsing~=3.0",
    "pyyaml",
    "networkx",
]
requires-python = "~=3.7"
description-file = "README.rst"
home-page = "https://parselglossy.readthedocs.io"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]

[tool.flit.metadata.requires-extra]
test = [
    "codecov",
    "coverage",
    "hypothesis",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-sugar",
]
dev = [
    "black==22.3.0",  # NOTE We pin black to avoid inconsistent formatting (and failing CI)
    "flake8",
    "isort",
    "mypy",
    "types-PyYAML",
]
doc = [
    "sphinx",
    "furo",
]

[tool.flit.scripts]
parselglossy = "parselglossy.cli:cli"
